--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
+<!-- Main HTML5 document for the Random Video Game Generator application -->
 <html lang="">
 <head>
+  <!-- UTF-8 character set to support all international characters -->
   <meta charset="UTF-8">
+  <!-- Viewport meta tag to ensure responsive rendering on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Generatore videogiochi</title>
+  <!-- Application title displayed in the browser tab -->
+  <title>Random Video Game Generator</title>
 </head>
 <body>
+<!-- Root element where the Vue.js application will be mounted -->
+<!-- All dynamic application content will be rendered here -->
 <div id="app"></div>
+<!-- Main Vue.js application script loaded as ES6 module -->
+<!-- This file initializes and configures the entire application -->
 <script type="module" src="/src/main.js"></script>
 </body>
 </html>
