feat(ui): update base layout and global styles in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Application title displayed in the browser tab -->
   <title>Random Video Game Generator</title>
 </head>
-<body>
+<body class="bg-zinc-950 text-white antialiased">
 <!-- Root element where the Vue.js application will be mounted -->
 <!-- All dynamic application content will be rendered here -->
 <div id="app"></div>
